--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -24,6 +24,10 @@ jobs:
       - name: Build site
         run: |
           mkdir -p _site
+          # Inject commit hash into script.js
+          sed -i "s/const BUILD_COMMIT = 'DEV_VERSION';/const BUILD_COMMIT = '${GITHUB_SHA}';/g" script.js
+          # Add cache busting to script tag in HTML files
+          sed -i "s/script.js/script.js?v=${GITHUB_SHA}/g" *.html
           tar --exclude='./.git' --exclude='./.github' --exclude='./_site' -cf - . | tar -xf - -C _site
           jq -n --arg sha "$GITHUB_SHA" --arg time "$(date -u +'%Y-%m-%d %H:%M UTC')" --arg msg "$(git log -1 --pretty=%B)" '{commit: $sha, build_time: $time, message: $msg}' > _site/commit.json
 
