--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,7 +29,8 @@ jobs:
           # Add cache busting to script tag in HTML files
           sed -i "s/script.js/script.js?v=${GITHUB_SHA}/g" *.html
           tar --exclude='./.git' --exclude='./.github' --exclude='./_site' -cf - . | tar -xf - -C _site
-          jq -n --arg sha "$GITHUB_SHA" --arg time "$(date -u +'%Y-%m-%d %H:%M UTC')" --arg msg "$(git log -1 --pretty=%B)" '{commit: $sha, build_time: $time, message: $msg}' > _site/commit.json
+          rm -f _site/commit.json
+          jq -n -c --arg sha "$GITHUB_SHA" --arg time "$(date -u +'%Y-%m-%d %H:%M UTC')" --arg msg "$(git log -1 --pretty=%B)" '{commit: $sha, build_time: $time, message: $msg}' > _site/commit.json
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
